--- a/src/assets/styles/projectOverlay.css
+++ b/src/assets/styles/projectOverlay.css
@@ -1,6 +1,6 @@
 .dialog-wrapper {
     background-color: rgba(255, 255, 255, 0.08);
-    position: absolute;
+    position: fixed;
 
     top: 50%;
     left: 50%;
@@ -9,9 +9,9 @@
     
 
     width: 100%;
-    height: 100%;
+    height: 100vh;
     
-    z-index: 1;
+    z-index: 3;
 }
 
 .dialog-wrapper[data-is-active="true"] {
@@ -23,6 +23,8 @@
     -webkit-backdrop-filter: blur(2px);
 
     z-index: 2;
+
+    overflow: hidden;
 }
 
 .dialog-wrapper[data-is-active="false"] {
