--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -17,6 +17,10 @@
     overflow: hidden;
 }
 
+body {
+    -webkit-font-smoothing: antialiased;
+}
+
 body[data-dialog-active="true"] {
     overflow: hidden;
 }
