Initial option handler for option selection functionality
Minor style changes

--- a/src/assets/styles/addTaskOverlay.css
+++ b/src/assets/styles/addTaskOverlay.css
@@ -9,7 +9,7 @@ dialog.my-add-task-dialog {
     width: 100%;
     max-width: 600px;
 
-    margin: 0 auto;
+    /* margin: 0 auto; */
     padding: 0.8rem;
 
     background-color: var(--glass-background);
