--- a/src/assets/styles/todo_list_content.css
+++ b/src/assets/styles/todo_list_content.css
@@ -6,7 +6,10 @@
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
+
+    overflow-y: auto;
+    height: 100vh;
 }
 
 .todo-list-wrapper {
