Added Render List Funtionality
refactor code

minor style changes

--- a/src/assets/styles/todo_list_content.css
+++ b/src/assets/styles/todo_list_content.css
@@ -245,6 +245,11 @@
     text-align: center;
 
     gap: 0.2rem;
+    visibility: visible;
+}
+
+.list-extra-description .date[data-date="none"] {
+    visibility: hidden;
 }
 
 .list-extra-description .date svg {
