--- a/src/assets/styles/sidebar_menu.css
+++ b/src/assets/styles/sidebar_menu.css
@@ -168,7 +168,7 @@
     border-radius: 0.3rem;
 
     font-size: var(--menu-font-size);
-    color: var(--text-color);
+    color: var(--text-secondary-color);
 
     border: 1px solid transparent;
 
@@ -505,8 +505,106 @@
     background-color: var(--secondary-color-light);
 }
 
+.mobile-menu {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     .sidebar-menu[data-is-active="true"] {
         width: 16rem;
     }
+}
+
+@media screen and (max-width: 510px) { 
+    .sidebar-menu {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+
+        background: var(--glass-background);
+        box-shadow: inset 0 0 15px 5px rgba(0, 0, 0, 0.05);
+        backdrop-filter: blur(6.5px);
+        -webkit-backdrop-filter: blur(6.5px);
+
+        border: var(--glass-border);
+        border-radius: calc(0.1rem + 0.5rem);
+
+        padding: 0.5rem;
+
+        position: fixed;
+        bottom: 1rem;
+
+        transform: translate(-50%, 0);
+        left: 50%;
+
+        z-index: 2;
+    }
+
+    .mobile-menu .menu-list {
+        display: flex;
+        flex-direction: row;
+        gap: 0.5rem;
+
+    }
+
+    .mobile-menu .menu-list li {
+        margin: 0;
+    }
+
+    .mobile-menu .menu-list li a {
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+        justify-content: center;
+
+        gap: 0.3rem;
+
+        padding: 0.3rem;
+
+        font-weight: 600;
+    }
+
+    .mobile-menu .menu-list a span {
+        /* color: var(--text-secondary-color); */
+
+        font-size: var(--xx-small-font-size);
+    }
+
+    .mobile-menu .menu-list li a > div svg {
+        width: var(--large-font-size);
+        height: var(--large-font-size);
+    }
+
+   .mobile-menu .add-project-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0rem;
+   }
+
+   .mobile-menu .add-project-button .add-button {
+    margin-bottom: 0;
+    padding: 0;
+    border-radius: 50%;
+
+    aspect-ratio: 1 / 1;
+
+    background-color: transparent;
+   }
+
+   .mobile-menu .add-project-button svg {
+    width: calc(var(--large-font-size) * 2.3);
+    height: calc(var(--large-font-size) * 2.3);
+
+    fill: var(--accent-color);
+   }
+    
 }
