--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -17,6 +17,10 @@
     overflow: hidden;
 }
 
+html {
+    background-color: var(--background);
+}
+
 body {
     -webkit-font-smoothing: antialiased;
 }
@@ -27,8 +31,4 @@ body[data-dialog-active="true"] {
 
 body[data-dialog-active="false"] {
     overflow: auto;
-}
-
-.sidebar-right {
-    background-color: pink;
 }
