--- a/src/assets/styles/sidebar_menu.css
+++ b/src/assets/styles/sidebar_menu.css
@@ -195,7 +195,6 @@
     left: 0rem;
 }
 
-/* change to false */
 .sidebar-menu[data-is-active="false"] .menu-list a span {
     visibility: hidden;
     opacity: 0;
@@ -215,8 +214,6 @@
     border: 1px solid transparent;
 }
 
-/* testing */
-/* change to false */
 .sidebar-menu[data-is-active="false"] .menu-list li a {
     padding: 0.8rem;
 }
@@ -606,5 +603,24 @@
 
     fill: var(--accent-color);
    }
+
+   .project-cards {
+    margin: 0;
+    padding: 1.5rem 1rem;
+
+    border-bottom: var(--item-border-light);
+    border-radius: 0rem;
+
+    gap: 0.5rem;
+   }
+
+   .project-cards .project-cards-icon > svg {
+    width: calc(var(--project-icon-size) * 1.2);
+    height: calc(var(--project-icon-size) * 1.2);
+}
     
+.project-description p.project-title {
+    font-size: calc(var(--small-font-size) * 1.1);
+    font-weight: 500;
+}
 }
