--- a/src/assets/styles/editOverlay.css
+++ b/src/assets/styles/editOverlay.css
@@ -1,4 +1,4 @@
-dialog.my-add-task-dialog {
+dialog.edit-dialog {
     position: absolute;
 
     top: 50%;
@@ -9,7 +9,6 @@ dialog.my-add-task-dialog {
     width: 100%;
     max-width: 600px;
 
-    /* margin: 0 auto; */
     padding: 0.8rem;
 
     background-color: var(--glass-background);
@@ -25,35 +24,32 @@ dialog.my-add-task-dialog {
     box-shadow: 0 0 15px 3px rgba(0, 0, 0, 0.10);
 }
 
-.my-add-task-dialog form.my-task {
-    padding: 0.5rem;
-    
-    border: var(--item-border);
-    border-radius: 0.5rem;
+.edit-dialog form.edit-my-task {
+    padding: 1rem;
 
-    background-color: white;
-
-    display: flex;
-    flex-direction: column;
-    
-}
-
-form.my-task .top-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    /* gap: 0.5rem; */
+
+    background-color: white;
+
+    border: var(--item-border);
+    border-radius: 0.5rem;
 }
 
-.forms-user .top-section {
-    padding: 0.3rem;
-    
+form.edit-my-task .top-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 0.3rem;
 
     gap: 0.5rem;
 }
 
-.forms-user .top-section input[type='text'] {
+.edit-form-user .top-section input[type='text'] {
     padding: 0.5rem;
 
     appearance: none;
@@ -72,19 +68,19 @@ form.my-task .top-section {
     transition: all 0.2s ease;
 }
 
-.forms-user .top-section input[type='text']::placeholder {
+.edit-form-user .top-section input[type='text']::placeholder {
     font-weight: 500;
     font-size: var(--large-font-size);
     color: var(--text-secondary-color);
     opacity: 0.5;
 }
 
-.forms-user .top-section input[type='text']:focus {
+.edit-form-user .top-section input[type='text']:focus {
     outline: none;
     border-bottom: 1px solid var(--secondary-color);
 }
 
-.forms-user .top-section textarea {
+.edit-form-user .top-section textarea {
     padding: 0.5rem;
     
     appearance: none;
@@ -110,27 +106,27 @@ form.my-task .top-section {
     transition: all 0.2s ease;
 }
 
-.forms-user .top-section textarea::placeholder {
+.edit-form-user .top-section textarea::placeholder {
     font-weight: 400;
     font-size: var(--small-font-size);
     color: var(--text-secondary-color);
     opacity: 0.5;
 }
 
-.forms-user .top-section textarea:focus {
+.edit-form-user .top-section textarea:focus {
     border: 1px solid var(--secondary-color);
     overflow: hidden;
     outline: none;
 }
 
-.forms-user .bottom-section {
+.edit-form-user .bottom-section {
     padding: 0.3rem;
     display: flex;
 
     gap: 1rem;
 }
 
-.forms-user .bottom-section select {
+.edit-form-user .bottom-section select {
     border: var(--item-border);
     border-radius: 4px;
 
@@ -146,12 +142,12 @@ form.my-task .top-section {
     transition: all 0.2s ease;
 }
 
-.forms-user .bottom-section select:focus {
+.edit-form-user .bottom-section select:focus {
     outline: none;
     border: 1px solid var(--secondary-color);
 }
 
-.forms-user .bottom-section input[type='date'] {
+.edit-form-user .bottom-section input[type='date'] {
     border: var(--item-border);
     border-radius: 4px;
 
@@ -168,13 +164,13 @@ form.my-task .top-section {
 
     transition: all 0.2s ease;
 }
-  
-.forms-user .bottom-section input[type='date']:focus {
+
+.edit-form-user .bottom-section input[type='date']:focus {
     outline: none;
     border: 1px solid var(--secondary-color);
 }
 
-form.my-task .buttons {
+form.edit-my-task .buttons {
     padding: 0.3rem;
 
     display: flex;
@@ -185,39 +181,12 @@ form.my-task .buttons {
     gap: 1rem;
 }
 
-.buttons button.submit, .buttons button.cancel {
-    margin: 0;
-    padding: 0.8rem;
-
-    width: 6rem;
-
-    border-radius: 0.3rem;
-    border: none;
-}
-
-.buttons button.cancel {
-    border: var(--glass-border);
-    background-color: var(--item-background);
-
-    font-size: var(--small-font-size);
-    font-weight: 500;
-    
-    letter-spacing: 0.02rem;
-    color: var(--text-secondary-color);
-
-    cursor: pointer;
-}
-
-.buttons button.cancel:hover {
-    background-color: var(--item-background-hover);
-}
-
 @media screen and (max-width: 510px){
-    .forms-user .bottom-section select {
+    .edit-form-user .bottom-section select {
         height: 2rem;
     }
 
-    form.my-task .buttons {
+    form.edit-my-task .buttons {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
@@ -225,9 +194,5 @@ form.my-task .buttons {
         gap: 0.5rem;
 
         margin-top: 1rem;
-    }
-
-    .buttons button.submit, .buttons button.cancel {
-        width: 100%;
     }
 }
