--- a/src/assets/styles/projectOverlay.css
+++ b/src/assets/styles/projectOverlay.css
@@ -293,7 +293,7 @@ button.submit {
     font-size: var(--small-font-size);
     font-weight: 500;
     
-    letter-spacing: 2%;
+    letter-spacing: 0.02rem;
     color: var(--text-color-light);
 
     cursor: pointer;
